syntax = "proto3";

package ai.metathings.service.policyd;
option go_package = "github.com/nayotta/metathings/proto/policyd";

import "github.com/casbin/casbin-server/proto/casbin.proto";

service PolicydService {
  // Casbin server functions
  rpc NewEnforcer (proto.NewEnforcerRequest) returns (proto.NewEnforcerReply) {}
  rpc NewAdapter (proto.NewAdapterRequest) returns (proto.NewAdapterReply) {}

  rpc Enforce (proto.EnforceRequest) returns (proto.BoolReply) {}

  rpc LoadPolicy (proto.EmptyRequest) returns (proto.EmptyReply) {}
  rpc SavePolicy (proto.EmptyRequest) returns (proto.EmptyReply) {}

  rpc AddPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc AddNamedPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemovePolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveNamedPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveFilteredPolicy (proto.FilteredPolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveFilteredNamedPolicy (proto.FilteredPolicyRequest) returns (proto.BoolReply) {}
  rpc GetPolicy (proto.EmptyRequest) returns (proto.Array2DReply) {}
  rpc GetNamedPolicy (proto.PolicyRequest) returns (proto.Array2DReply) {}
  rpc GetFilteredPolicy (proto.FilteredPolicyRequest) returns (proto.Array2DReply) {}
  rpc GetFilteredNamedPolicy (proto.FilteredPolicyRequest) returns (proto.Array2DReply) {}

  rpc AddGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc AddNamedGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveNamedGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveFilteredGroupingPolicy (proto.FilteredPolicyRequest) returns (proto.BoolReply) {}
  rpc RemoveFilteredNamedGroupingPolicy (proto.FilteredPolicyRequest) returns (proto.BoolReply) {}
  rpc GetGroupingPolicy (proto.EmptyRequest) returns (proto.Array2DReply) {}
  rpc GetNamedGroupingPolicy(proto.PolicyRequest) returns (proto.Array2DReply) {}
  rpc GetFilteredGroupingPolicy (proto.FilteredPolicyRequest) returns (proto.Array2DReply) {}
  rpc GetFilteredNamedGroupingPolicy (proto.FilteredPolicyRequest) returns (proto.Array2DReply) {}

  rpc GetAllSubjects (proto.EmptyRequest) returns (proto.ArrayReply) {}
  rpc GetAllNamedSubjects (proto.SimpleGetRequest) returns (proto.ArrayReply) {}
  rpc GetAllObjects (proto.EmptyRequest) returns (proto.ArrayReply) {}
  rpc GetAllNamedObjects (proto.SimpleGetRequest) returns (proto.ArrayReply) {}
  rpc GetAllActions (proto.EmptyRequest) returns (proto.ArrayReply) {}
  rpc GetAllNamedActions (proto.SimpleGetRequest) returns (proto.ArrayReply) {}
  rpc GetAllRoles (proto.EmptyRequest) returns (proto.ArrayReply) {}
  rpc GetAllNamedRoles (proto.SimpleGetRequest) returns (proto.ArrayReply) {}

  rpc HasPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc HasNamedPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc HasGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc HasNamedGroupingPolicy (proto.PolicyRequest) returns (proto.BoolReply) {}

  // Custom functions
  rpc EnforceBucket (EnforceBucketRequest) returns (proto.BoolReply) {}
  rpc AddPresetPolicy(proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc RemovePresetPolicy(proto.PolicyRequest) returns (proto.BoolReply) {}
  rpc Initialize(proto.EmptyRequest) returns (proto.EmptyReply) {}
}

message EnforceBucketRequest {
  repeated proto.EnforceRequest requests = 1;
}
